<resources>
    <string name="app_name">AutoHub</string>
    <string name="welcometext1">Find ideal</string>
    <string name="welcometext2">car</string>
    <string name="welcometext3">for you</string>
    <string name="textabovebtn">Great car - great price</string>
    <string name="welcomebtn">Get started</string>
    <string name="skip">пропустити реєстрацію</string>
    <string name="filterheader">Підбір автомобіля</string>
    <string name="filtercost">Ціна, $</string>
    <string name="filtervendor">Марка</string>
    <string name="filtercolor">Колір</string>
    <string name="buybtn">Buy</string>
    <string name="applybtn">Apply</string>
    <string name="enter_name">Vendor</string>
    <string name="add_record">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No records found</string>
    <string name="enter_desc">Model</string>
    <string name="enter_title">Country</string>
    <string name="Success">Success</string>

</resources>
