<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primarybasic"
        tools:context=".MainActivity"
        android:fontFamily="Arial, Helvetica, sans-serif">


    <TextView

            android:id="@+id/textView1"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcometext1"
            android:textColor="@color/colortext"
            android:layout_marginTop="110sp"
            android:layout_marginHorizontal="60sp" />

    <TextView
            android:id="@+id/textView2"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcometext2"
            android:textColor="@color/primarycol"
            android:layout_marginTop="110sp"
            android:layout_marginLeft="240sp" />

    <TextView
            android:id="@+id/textView3"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcometext3"
            android:textColor="@color/colortext"
            android:layout_below="@+id/textView1"
            android:layout_marginHorizontal="60sp" />

    <ImageView
            android:layout_width="544dp"
            android:layout_height="265dp"
            android:layout_marginLeft="46sp"
            app:srcCompat="@mipmap/img"
            android:id="@+id/imageView"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-46dp"
            android:contentDescription="TODO" />

    <TextView
            android:id="@+id/textabovebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textabovebtn"
            android:layout_below="@+id/imageView"
            android:textColor="@color/colortext"

            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="100sp"
            android:textSize="25sp"
            android:textAlignment="viewStart" />

    <Button
            android:id="@+id/main_btn"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:backgroundTint="@color/primarycol"
            android:textColor="@color/colortext"
            android:text="@string/welcomebtn"
            android:layout_below="@+id/textabovebtn"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="100sp"
            app:cornerRadius="15sp"
            android:textSize="22.5sp"/>


    <Button
            android:text="@string/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_skip"
            android:layout_below="@+id/main_btn"
            android:backgroundTint="@color/primarybasic"
            android:textColor="@color/sectext"


            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp" />


</RelativeLayout>