<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/primarybasic">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape1">

                <ImageView
                        android:id="@+id/imageView_flag"
                        android:layout_width="280.26sp"
                        android:layout_height="156.67sp"
                        android:layout_marginStart="168dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/car"
                        tools:ignore="VectorDrawableCompat"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:visibility="visible"
                        app:layout_constraintVertical_bias="0.457" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id"

                        android:textColor="@color/colortext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView_flag"
                        android:visibility="visible" />

                <TextView
                        android:id="@+id/title"
                        android:textColor="@color/colortext"
                        android:maxLines="1"
                        android:padding="3dp"
                        android:textStyle="bold"
                        android:layout_width="232dp"
                        android:layout_height="40dp"
                        android:text="Mitsubishu"
                        android:textSize="22sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp" />

                <TextView
                        android:id="@+id/desc"
                        android:textColor="@color/colortext"
                        android:layout_below="@id/title"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/id"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:visibility="visible"
                        android:layout_width="232dp"
                        android:layout_height="23dp"
                        android:text="Model: Lancer Evolution 7rs"
                        app:layout_constraintEnd_toEndOf="@+id/title"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                        android:id="@+id/txtxyear"
                        android:textColor="@color/colortext"
                        android:layout_below="@id/title"
                        android:layout_toRightOf="@id/id"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:visibility="visible"
                        android:layout_width="232dp"
                        android:layout_height="23dp"
                        android:text="Year: 2000"
                        app:layout_constraintTop_toBottomOf="@+id/txtcolor"
                        app:layout_constraintEnd_toEndOf="@+id/txtcolor"
                        app:layout_constraintStart_toStartOf="@+id/txtcolor" />

                <TextView
                        android:id="@+id/txtcolor"
                        android:textColor="@color/colortext"
                        android:layout_below="@id/title"
                        android:layout_toRightOf="@id/id"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:visibility="visible"
                        android:layout_width="232dp"
                        android:layout_height="23dp"
                        android:text="Color: Red"
                        app:layout_constraintTop_toBottomOf="@+id/txtfuel"
                        app:layout_constraintEnd_toEndOf="@+id/txtfuel"
                        app:layout_constraintStart_toStartOf="@+id/txtfuel" />

                <TextView
                        android:id="@+id/txtfuel"
                        android:textColor="@color/colortext"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:visibility="visible"
                        android:layout_width="232dp"
                        android:layout_height="23dp"
                        android:text="Fuel: Electro"
                        app:layout_constraintEnd_toEndOf="@+id/title"
                        app:layout_constraintStart_toStartOf="@+id/desc"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toBottomOf="@+id/desc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <EditText
                android:id="@+id/description_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/enter_desc"
                android:layout_marginTop="25sp"
                android:padding="10sp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext">></EditText>

        <EditText
                android:id="@+id/color1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="Color"
                android:layout_marginTop="3sp"
                android:padding="10sp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext">></EditText>

        <EditText
                android:id="@+id/Fuel_type1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="Fuel type"
                android:layout_marginTop="3sp"
                android:padding="10sp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext"
                android:background="@drawable/shape">></EditText>

        <EditText
                android:id="@+id/Year1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="Year"
                android:layout_marginTop="3sp"
                android:padding="10sp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext"
                android:background="@drawable/shape">></EditText>

        <EditText
                android:id="@+id/Cost1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="Cost"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext"
                android:layout_marginTop="3sp"
                android:padding="10sp"
                android:background="@drawable/shape">></EditText>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btn_delete"
                    android:backgroundTint="@color/primarycol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/colortext"
                    android:text="@string/btn_delete" />
            <Button
                    android:id="@+id/btn_update"
                    android:backgroundTint="@color/primarycol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@color/colortext"
                    android:text="@string/btn_update" />



        </LinearLayout>



    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0sp">

        <Button
                android:id="@+id/btn_buy"
                android:backgroundTint="@color/primarycol"
                android:layout_margin="0sp"
                android:layout_width="fill_parent"
                android:layout_height="71dp"
                android:textSize="22sp"
                android:textColor="@color/colortext"
                android:text="buy"
                android:onClick="showToast"
                android:layout_gravity="bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
